refactor(authentication): add middleware, refreshToken rotation, reuseable code
