# docs/swagger.json
@@ -44,12 +44,24 @@
         },
         "/auth/logout": {
             "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Logout User",
                 "tags": [
                     "Auth"
                 ],
                 "summary": "Logout",
-                "responses": {}
+                "responses": {
+                    "204": {
+                        "description": "No Content"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                }
             }
         },
         "/auth/refresh": {
@@ -110,6 +122,11 @@
         },
         "/users": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Get all Users",
                 "tags": [
                     "User"
@@ -121,8 +138,30 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/models.User"
+                                "$ref": "#/definitions/models.UserResponse"
                             }
+                        }
+                    }
+                }
+            }
+        },
+        "/users/me": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Get current User",
+                "tags": [
+                    "User"
+                ],
+                "summary": "Get Me",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.UserResponse"
                         }
                     }
                 }
@@ -130,6 +169,11 @@
         },
         "/users/{id}": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Get User by ID",
                 "tags": [
                     "User"
@@ -148,7 +192,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.User"
+                            "$ref": "#/definitions/models.UserResponse"
                         }
                     }
                 }
@@ -156,64 +200,36 @@
         }
     },
     "definitions": {
-        "gorm.DeletedAt": {
+        "models.UserResponse": {
             "type": "object",
             "properties": {
-                "time": {
+                "email": {
                     "type": "string"
-                },
-                "valid": {
-                    "description": "Valid is true if Time is not NULL",
-                    "type": "boolean"
-                }
-            }
-        },
-        "models.User": {
-            "type": "object",
-            "required": [
-                "Email",
-                "Password"
-            ],
-            "properties": {
-                "Email": {
-                    "type": "string"
-                },
-                "ID": {
-                    "type": "string"
-                },
-                "Name": {
-                    "type": "string"
-                },
-                "Password": {
-                    "type": "string",
-                    "maxLength": 32,
-                    "minLength": 8
-                },
-                "Photo": {
-                    "type": "string"
-                },
-                "Provider": {
-                    "type": "string"
-                },
-                "Role": {
-                    "type": "string"
-                },
-                "Verified": {
-                    "type": "boolean"
-                },
-                "createdAt": {
-                    "type": "string"
-                },
-                "deletedAt": {
-                    "$ref": "#/definitions/gorm.DeletedAt"
                 },
                 "id": {
-                    "type": "integer"
+                    "type": "string"
                 },
-                "updatedAt": {
+                "name": {
+                    "type": "string"
+                },
+                "photo": {
+                    "type": "string"
+                },
+                "provider": {
+                    "type": "string"
+                },
+                "role": {
                     "type": "string"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "BearerAuth": {
+            "description": "Type \"Bearer\" followed by a space and JWT token.",
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
